Search-link on small displays instead of form in the navbar; zIndex-Bugfix

--- a/mainapp/assets/css/_home-map.scss
+++ b/mainapp/assets/css/_home-map.scss
@@ -1,8 +1,3 @@
-// There's one element with 800 and an outer with 10000
-$leaflet-controls-zindex: 1000;
-$typeahead-zindex: $leaflet-controls-zindex + 10;
-$search-icon-zindex: $typeahead-zindex + 10;
-
 .search-autocomplete-home {
   span.twitter-typeahead {
     z-index: $typeahead-zindex;
