--- a/mainapp/assets/css/_vars.scss
+++ b/mainapp/assets/css/_vars.scss
@@ -7,4 +7,10 @@ $fa-font-path: "~font-awesome/fonts/";
 
 $theme-colors: (
   "navbar": #343a40, // $gray-800 - hardcoded as _variables.scss of bootstrap is not yet loaded here
-)
+);
+
+// There's one element with 800 and an outer with 10000
+$leaflet-controls-zindex: 1000;
+$typeahead-zindex: $leaflet-controls-zindex + 10;
+$search-icon-zindex: $typeahead-zindex + 10;
+$zindex-dropdown: $typeahead-zindex + 1; // The User-menu should be above the search on the home page
